package cz.cvut.fel.pjv.arimaa.model;

/**
 * 8×8 board state: piece placement and trap squares.
 */
public class Board {

    /**
     * Applies no rules in CP2; reserved for future implementation.
     */
    public void clear() {
    }
}
