package cz.cvut.fel.pjv.arimaa.model;

/**
 * High-level lifecycle states of the application and match.
 */
public enum GameState {
    MENU,
    SETUP,
    PLAY,
    PAUSED,
    GAME_OVER
}
