package cz.cvut.fel.pjv.arimaa.model;

/**
 * Piece strengths follow official Arimaa ordering (strongest to weakest).
 */
public enum PieceType {
    ELEPHANT,
    CAMEL,
    HORSE,
    DOG,
    CAT,
    RABBIT
}
