package cz.cvut.fel.pjv.arimaa.model;

/**
 * Gold moves first in Arimaa; silver is the opponent.
 */
public enum PlayerSide {
    GOLD,
    SILVER
}
